# simple_message_broker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dev.Dockerfile  ubuntu_dev.Dockerfile  vcpkg.json
examples/: CMakeLists.txt  client_1.cpp  client_2.cpp  multiple_client.cpp  server.cpp
include/msg_broker/: block.h  connection.h  defs.h  forward_declarations.h  message_handler.h  message_util.h
include/msg_broker/client/: client.h  client_message_handler.h  client_topic.h
include/msg_broker/server/: server.h  server_message_handler.h  server_topic.h  server_topic_manager.h
protobuf/: message.proto
src/: block.cpp  client.cpp  client_message_handler.cpp  client_topic.cpp  connection.cpp  message_handler.cpp  server.cpp  server_message_handler.cpp  server_topic.cpp  server_topic_manager.cpp
